--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -18,4 +18,14 @@ body {
 			-webkit-transform: rotateY(180deg) translateZ(-3000px); 
   	}
   }
+  .reticle{
+    display: block;
+    opacity: 0.6;
+    background-color:white;
+    width:20px;
+    height: 20px;
+  }
+  .hide{
+    opacity: 0;
+  }
 }
